Add definitions to program.

--- a/index.html
+++ b/index.html
@@ -13,26 +13,30 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <ul>
-      <li>JavaScript (JS)<div>DEFINITION</div></li>
-      <li>Operators<div>DEFINITION</div></li>
-      <li>Variables<div>DEFINITION</div></li>
-      <li>Variable naming conventions<div>DEFINITION</div></li>
-      <li>Functions<div>DEFINITION</div></li>
-      <li>Methods<div>DEFINITION</div></li>
-      <li>Arguments<div>DEFINITION</div></li>
-      <li>Parameters<div>DEFINITION</div></li>
-      <li>Return<div>DEFINITION</div></li>
-      <li>Chaining methods<div>DEFINITION</div></li>
-      <li>Strings<div>DEFINITION</div></li>
-      <li>Booleans<div>DEFINITION</div></li>
-      <li>Undefined<div>DEFINITION</div></li>
-      <li>NaN<div>DEFINITION</div></li>
-      <li>Escape<div>DEFINITION</div></li>
-      <li>Alert<div>DEFINITION</div></li>
-      <li>Comments<div>DEFINITION</div></li>
-      <li>jQuery<div>DEFINITION</div></li>
-      <li>Attributes<div>DEFINITION</div></li>
-    </ul>
+    <div class = "container">
+      <ul>
+        <li>JavaScript (JS)<div>JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.</div></li>
+        <li>Operators<div>Programming languages typically support a set of operators: constructs which behave generally like functions, but which differ syntactically or semantically from usual functions. Common simple examples include arithmetic (addition with +), comparison (with >), and logical operations (such as AND). More involved examples include assignment (usually = or :=), field access in a record or object (usually .), and the scope resolution operator (often ::). Languages usually define a set of built-in operators, and in some cases allow user-defined operators.</div></li>
+        <li>Variables<div><p>In computer programming, a variable or scalar is a storage location (identified by a memory address) paired with an associated symbolic name (an identifier), which contains some known or unknown quantity of information referred to as a value. The variable name is the usual way to reference the stored value, in addition to referring to the variable itself, depending on the context. This separation of name and content allows the name to be used independently of the exact information it represents. The identifier in computer source code can be bound to a value during run time, and the value of the variable may thus change during the course of program execution.</p>
+        <p>Variables in programming may not directly correspond to the concept of variables in mathematics. The latter is abstract, having no reference to a physical object such as storage location. The value of a computing variable is not necessarily part of an equation or formula as in mathematics. Variables in computer programming are frequently given long names to make them relatively descriptive of their use, whereas variables in mathematics often have terse, one- or two-character names for brevity in transcription and manipulation.</p>
+        <p>A variable's storage location may be referred by several different identifiers, a situation known as aliasing. Assigning a value to the variable using one of the identifiers will change the value that can be accessed through the other identifiers.</p></div></li>
+        <li>Variable naming conventions<div>In computer programming, a naming convention is a set of rules for choosing the character sequence to be used for identifiers which denote variables, types, functions, and other entities in source code and documentation.</div></li>
+        <li>Functions<div>Functions "Encapsulate" a task (they combine many instructions into a single line of code). Most programming languages provide many built in functions that would otherwise require many steps to accomplish, for example computing the square root of a number. In general, we don't care how a function does what it does, only that it "does it"!</div></li>
+        <li>Methods<div>A method in object-oriented programming (OOP) is a procedure associated with a message and an object. An object is mostly made up of data and behavior, which form the interface that an object presents to the outside world. Data is represented as properties of the object and behavior as methods. For example, a Window object would have methods such as open and close, while its state (whether it is opened or closed) would be a property.</div></li>
+        <li>Arguments<div>In programming, a value that you pass to a routine. For example, if SQRT is a routine that returns the square root of a value, then SQRT(25) would return the value 5. The value 25 is the argument.</div></li>
+        <li>Parameters<div>In computer programming, a parameter (often called formal parameter[1] or formal argument) is a special kind of variable, used in a subroutine to refer to one of the pieces of data provided as input to the subroutine.[a] These pieces of data are the values[2][3][4] of the arguments (often called actual arguments or actual parameters) with which the subroutine is going to be called/invoked. An ordered list of parameters is usually included in the definition of a subroutine, so that, each time the subroutine is called, its arguments for that call are evaluated, and the resulting values can be assigned to the corresponding parameters.</div></li>
+        <li>Return<div>The expression whose value is to be returned. If omitted, undefined is returned instead.</div></li>
+        <li>Chaining methods<div>Method chaining is a technique that can be used to simplify code in scenarios that involve calling multiple functions on the same object consecutively. This is an example of how you can use method chaining when using jQuery.</div></li>
+        <li>Strings<div>String literals (denoted by double or single quotes) and strings returned from String calls in a non-constructor context (i.e., without using the new keyword) are primitive strings. JavaScript automatically converts primitives to String objects, so that it's possible to use String object methods for primitive strings.</div></li>
+        <li>Booleans<div>The Boolean object represents two values, either "true" or "false". If value parameter is omitted or is 0, -0, null, false, NaN, undefined, or the empty string (""), the object has an initial value of false.</div></li>
+        <li>Undefined<div>The global undefined property represents the primitive value undefined. It is one of JavaScript's primitive types.</div></li>
+        <li>NaN<div>The global NaN property is a value representing Not-A-Number.</div></li>
+        <li>Escape<div>The JavaScript escape function replaces most punctuation symbols with the equivalent hex-codes, but was found to be inadequate when it came to UNICODE character encoding and has been superseded by the encodeURI function.</div></li>
+        <li>Alert<div>The alert() method displays an alert box with a specified message and an OK button.</div></li>
+        <li>Comments<div>In computer programming, a comment is a programmer-readable explanation or annotation in the source code of a computer program. They are added with the purpose of making the source code easier for humans to understand, and are generally ignored by compilers and interpreters.</div></li>
+        <li>jQuery<div>Query is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.</div></li>
+        <li>Attributes<div>In computing, an attribute is a specification that defines a property of an object, element, or file. It may also refer to or set the specific value for a given instance of such. For clarity, attributes should more correctly be considered metadata.</div></li>
+      </ul>
+    </div>
   </body>
 </html>
